# UVMultiFit

./: .gitignore  Changelog.txt  INSTALL.md  LICENSE  MANIFEST.in  Makefile  QuinnFringe.cpp  QuinnFringe.h  README.md  TEST1_disc.out  TEST1_disc.py  TEST2_Gaussian.py  TEST2_GaussianRing.py  TEST2_bubble.py  TEST2_expo.out  TEST2_expo.py  TEST2_power-2.py  TEST2_ring.out  TEST2_ring.py  TEST2_sphere.py  _QuinnFringe.cpp  _QuinnFringe.h  _uvmultimodel.cpp  activate  dofit.py  dosim.py  mkdocs.yml  setup.cfg  setup.py  simulation.py  uvmultifit.py  uvmultimodel.cpp
NordicARC/: __init__.py  immultifit.py  measurementset.py  modeler.py  quinn.py  simplex.py  utils.py  uvmultifit.py
docs/: index.md  install.md
outputs/: TEST1_disc.out  TEST2_Gaussian.out  TEST2_GaussianRing.out  TEST2_bubble.out  TEST2_expo.out  TEST2_power-2.out  TEST2_ring.out  TEST2_sphere.out  TEST3_multicomp.out
stubs/NordicARC/: __init__.pyi  measurementset.pyi  modeler.pyi  utils.pyi
test/: GAINS_EXPERIMENTAL.py  IMMULTIFIT.py  MULTICOMP.py  ONLYFLUX.py  PROFILES_ELLIPTICITY.py  README.md  TEST_ALL.py  WIDEFIELD_MOSAIC.py  test_uvmultimodel.py
test-cases/: FRINGE_FITTING.py  PROFILES_ELLIPTICITY.py  TEST1_disc.py  TEST2_Gaussian.py  TEST2_GaussianRing.py  TEST2_bubble.py  TEST2_expo.py  TEST2_power-2.py  TEST2_ring.py  TEST2_sphere.py  TEST3_multicomp.py  TEST4_widefield.py  TEST_ALL.py  WIDEFIELD_MOSAIC.py  dofit.py  dosim.py  simulation.py
test-cases/TEST1-2_PROFILES_ELLIPTICITY/: test1.py
unittests/: README.md  __init__.py  test_uvmultifit.py  test_uvmultimodel.py
(+21 files in other folders)
