[metadata]
name = NordicARC
version = 4.0.0
author = Ivan Marti-Vidal
author_email = i.marti-vidal@uv.es
description = Fit models directly to visibility data
url = https://github.com/onsala-space-observatory/UVMultiFit.git
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering

[mypy]
mypy_path = stubs
